# PyBinpack

./: .gitignore  README.md  binpack.py  hdiutil.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
pybinpack/: __main__.py  binpack.py  hdiutil.py
tests/: test_binpackfs.py
